--- a/src/assets/scss/mixins.scss
+++ b/src/assets/scss/mixins.scss
@@ -2,7 +2,7 @@
 @mixin begin-page {
   min-height: calc(100vh - #{$header_height});
   margin: 0;
-  padding: 30px 0;
+  padding: 20px 0;
   overflow-y: auto;
   // flex-wrap: wrap;
   font-size: 1.1rem;
